--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,40 @@ ehthumbs.db
 Desktop.ini
 
 # Uploaded images
-public/uploads/ 
+public/uploads/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# 업로드된 이미지 파일들 (로컬 개발용)
+/public/uploads/*
+!/public/uploads/.gitkeep 
